<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#505050"
    tools:context=".InicioActivity">

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/naranjalogo"
        android:fontFamily="@font/maven_pro_medium"
        android:text="@string/acerca"
        android:textColor="@color/gris3"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSalir"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/naranjalogo"
        android:fontFamily="@font/maven_pro_medium"
        android:text="@string/salir"
        android:textColor="@color/gris3"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="65dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/que_es_crunchyroll"
            android:textColor="@color/gris3"
            android:textSize="15sp"
            app:lineHeight="10dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="true"
            android:text="Crunchyroll es una plataforma de streaming de contenido de anime."
            android:textColor="@color/gris3"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="true"
            android:paddingBottom="10dp"
            android:text="@string/la_plataforma_se_especializa_en_la_transmisi_n_de_contenido_de_anime_dramas_coreanos_taiwaneses_chinos_y_japoneses_y_ha_ganado_una_gran_popularidad_entre_los_fan_ticos_de_este_g_nero"
            android:textColor="@color/gris3"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            app:srcCompat="@drawable/img3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/crunchyroll_es_una_de_las_plataformas_de_streaming_m_s_populares_en_el_mundo_con_m_s_de_120_millones_de_usuarios_registrados_y_10_millones_de_suscriptores_pagos_la_plataforma_es_disponible_en_m_s_de_200_pa_ses_y_ofrece_contenido_en_varios_idiomas_incluyendo_ingl_s_espa_ol_franc_s_alem_n_italiano_portugu_s_coreano_chino_simplificado_y_japon_s"
            android:textColor="@color/gris3"
            android:textSize="13sp" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:baselineAlignBottom="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mejores_anime_en_crunchyroll_png" />

</androidx.constraintlayout.widget.ConstraintLayout>