<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#505050"
    tools:context=".AcercaActivity">

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/naranjalogo"
        android:fontFamily="@font/maven_pro_medium"
        android:text="@string/volver"
        android:textColor="@color/gris3"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="500dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnVolver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/img2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnVolver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:fontFamily="sans-serif-black"
            android:text="Fernandez Moralez Smith"
            android:textAlignment="center"
            android:textColor="@color/gris3"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/editTextBackground"
            android:backgroundTint="@color/naranjalogo"
            android:text="@string/contactos_programador"
            android:textAlignment="center"
            android:textColor="@color/gris3"
            android:textColorHint="@color/gris3"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layaout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gmail_fernanmoral12_gmail_com_ncelular_2954556623"
                android:textAlignment="textStart"
                android:textColor="@color/gris3"
                android:textColorHint="@color/gris3"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/naranjaoscuro"
                android:clickable="false"
                android:paddingTop="10dp"
                android:text="@string/redactar_un_mensaje_al_gmail"
                android:textAlignment="center"
                android:textColor="@color/gris3"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/naranjaoscuro"
                    app:cornerRadius="3dp"
                    app:icon="@drawable/sendicon"
                    app:iconTint="@color/gris2"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/editbox_dropdown_dark_frame"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtAsunto"
                style="@android:style/Widget.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="?attr/actionBarItemBackground"
                android:ems="10"
                android:fitsSystemWindows="false"
                android:hint="@string/ingrese_el_asunto"
                android:hyphenationFrequency="none"
                android:inputType="text"
                android:padding="3dp"
                android:singleLine="false"
                android:soundEffectsEnabled="false"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/gris3"
                android:textColorHint="@color/gris1"
                android:textColorLink="@color/naranjalogo"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/editbox_dropdown_dark_frame"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtMensaje"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="?attr/actionBarItemBackground"
                android:ems="10"
                android:hint="@string/ingrese_el_mensaje"
                android:inputType="text"
                android:padding="3dp"
                android:textColor="@color/gris3"
                android:textColorHint="@color/gris1"
                android:textColorLink="@color/naranjalogo"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/dialog_holo_dark_frame"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btnVolver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:includeFontPadding="false"
            android:text="@string/realizar_llamada_telefonica"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/gris3"
            android:textColorHint="@color/gris3"
            android:textSize="20sp"
            android:typeface="normal" />

        <LinearLayout
            android:id="@+id/layaout1"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLlamar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/naranjaoscuro"
                app:cornerRadius="3dp"
                app:icon="@drawable/iconcall"
                app:iconTint="@color/gris2"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>